<resources>
    <string name="app_name">HiSchool</string>
    <string name="title_feed">피드</string>
    <string name="title_search">검색</string>
    <string name="title_notifications">알림</string>
    <string name="title_question">질문</string>
    <string name="title_profile">프로필</string>
    <string name="SchoolName">학교 이름</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="signUp">SignUp</string>
    <string name="dialogImageButtonMsg">다이얼로그 종료 버튼</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="passwordConfirm">비밀번호 확인</string>
    <string name="next">다음</string>
    <string name="signup">SignUp</string>
    <string name="x">x 버튼</string>
    <string name="name">이름</string>
    <string name="phone">연락처</string>
    <string name="profile">프로필 사진 설정</string>
    <string name="background">background</string>
    <string name="oneIntroduce">한줄 소개 입력</string>
    <string name="signin">SignIn</string>
    <string name="hi_school">고등학교 입시 정보는 HI! School</string>
    <string name="floatingbutton">floatingButton</string>
</resources>