<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_home"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_searchicon"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_question"
        android:icon="@drawable/ic_addpost"
        android:title="@string/title_question" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_good"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>