<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="390dp"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nixgon_bold"
        android:text="@string/signUp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/dialogImageButtonMsg"
        android:src="@drawable/ic_x_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="78dp"
        android:autofillHints=""
        android:background="@drawable/background_input_box"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="153dp"
        android:autofillHints=""
        android:background="@drawable/background_input_box"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="228dp"
        android:autofillHints=""
        android:background="@drawable/background_input_box"
        android:ems="10"
        android:hint="@string/passwordConfirm"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="315dp"
        android:background="@drawable/next_button_background_false"
        android:fontFamily="@font/nixgon_bold"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</androidx.cardview.widget.CardView>