<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_background"
        android:contentDescription="@string/background" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15sp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="25sp"
            android:fontFamily="@font/nixgon_bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            />

        <ImageButton
            android:id="@+id/xButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x_button"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/x" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="134dp"
            android:contentDescription="@string/profile" />

        <EditText
            android:id="@+id/introduce"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/oneIntroduce"
            android:fontFamily="@font/nixgon_bold"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="254dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/register"
            android:fontFamily="@font/nixgon_bold"
            android:background="@drawable/next_button_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="315dp"
            android:clickable="false"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>