<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_background" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15sp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="25sp"
            android:fontFamily="@font/nixgon_bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            />

        <ImageButton
            android:id="@+id/xButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x_button"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/x" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input_box"
            android:hint="@string/phone"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:inputType="phone"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:text="@string/next"
            android:fontFamily="@font/nixgon_bold"
            android:background="@drawable/next_button_background_false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="315dp"
            android:clickable="false"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>